# meme

./: .env.example  .gitignore  IMPLEMENTATION_REPORT.md  README.md  debug_test.py  pyproject.toml  requirements.txt  start.bat  开发文档.md  思路.md  模拟交易.py
backend/app/: config.py  main.py
backend/app/api/: routes_logs.py  routes_mock.py  routes_positions.py  routes_providers.py  routes_risk.py  routes_runtime.py  routes_runtime.py.bak_runtime_strategy_fix  routes_strategies.py  routes_tokens.py  routes_trades.py
backend/app/db/: database.py  repositories.py  schema.sql
backend/app/providers/: base.py  credential_router.py  gmgn.py  gmgn_real.py  gmgn_subscriber.py  jito.py  jito_real.py  jupiter.py  jupiter_real.py  mock_data.py  rate_limiter.py  rpc.py  rpc_real.py
backend/app/runners/: active_position_price_runner.py  discovery_runner.py  (+6 more)
backend/scripts/: audit_trenches_fields.py  debug_gmgn_field_probe.py  inspect_gmgn_trenches_fields.py  verify_gmgn_field_sources.py  verify_gmgn_risk_fields_live.py
data/debug_exports/: gmgn_api_probe_28uqGCZM_1778638145.json  gmgn_db_debug_dump.json
data_backup/: losing_trades_full_20260514_110819.json  session_error_and_strategy_report_20260514_102623.json  session_error_and_strategy_report_20260514_110821.json
docs/: API_FIELD_MAPPING_NOTES.md  API_FIELD_MAPPING_REPORT.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
scripts/: debug_pipeline.py  diagnose_gmgn_risk_fields.py  start_all.ps1  stop_all.ps1  test_sim_chain.ps1
(+63 files in other folders)
